--- a/src/app/modules/dashboard/wellness-exam/wellness-exam.component.scss
+++ b/src/app/modules/dashboard/wellness-exam/wellness-exam.component.scss
@@ -1,7 +1,7 @@
 .section {
   background: #ef3e2d;
   border-radius: 24px;
-  padding: 3rem 3rem;
+  padding: 3.5rem 3rem;
 }
 
 .wrapper {
